recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: value >- is not a member of Int
	if (steps>-1) {tree(steps-1, length * shrink,angle,shrink)};
                 ^Tree:8: error: value >- is not a member of Int
	if (steps>-1) {tree(steps-1, length * shrink,angle,shrink)};
                 ^